--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
-    <link rel=./main.css </head>
+    <link rel="stylesheet" href="./css/main.css">
+</head>
 
 <body>
-
+    CONTENT
 </body>
 
 </html>
