--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 
 <body>
-    CONTENT
+    <main class="container">
+        <div class="left-column">
+            <h1 class="main-title">Sign up</h1>
+            <!-- arba div -->
+            <footer class="bottom-links">
+
+                <a href="#">Privacy policy</a>
+                <span>&</span>
+                <a href="#">terms of service</a>
+            </footer>
+
+        </div>
+        <div class="right-column">
+            <div class="close">x</div>
+            <form class="form"> SIGN UP FORM </form>
+
+        </div>
+    </main>
 </body>
 
 </html>
