--- a/forgot-password/index.html
+++ b/forgot-password/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
-    <link rel="stylesheet" href="./css/form.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="shortcut icon" href="../favicon.png" type="image/png">
 </head>
 
@@ -47,7 +48,7 @@
                 <div class="form-row">
                     <button type="submit">Get started</button>
                     <span>or</span>
-                    <a href="#">Sign in</a>
+                    <a href="../">Sign up</a>
                 </div>
 
 
@@ -56,8 +57,6 @@
             </form>
         </div>
     </main>
-    <script src="script.js"></script>
-
 </body>
 
 </html>
